# firmware

./: .wifi.example  Cargo.toml  README.md  justfile
bmp390/: Cargo.toml
embedded/: Cargo.toml  README.md  config.just
sbc/: .gitgnore  Cargo.toml  README.md  config.just  meshtastic_config.yaml
sbc/bmp390/: Cargo.toml
sbc/bmp390/examples/: read.rs
sbc/scripts/: configure_wifi.sh
scripts/: configure_wifi.sh  get_just.sh
